2005-04-29  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: Make FilePosition slightly more useful by providing a
	  ToString() override which dumps the fpos_t structure contents into a 
	  hex string.  Add Equals(), GetHashCode(), operator==, and operator!=
	  so FilePosition behaves like a value type.

2005-04-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UnixClient.cs:
	* UnixListener.cs: TcpListener/TcpClient clones from Jow Shaw.

2005-04-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Mono.Posix.dll.sources: added UnixListener and UnixClient from Joe
	Shaw.

2005-04-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UnixEndPoint.cs: fix from Mono.Posix.

2005-04-20  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: Make all fork(2) and exec(2) functions `private`.  It
	  currently isn't safe to call these under *any* circumstances.  See also
	  68141, and this pertinent quote from Butenhof's 
	  "Programming with POSIX Threads", p197, s6.1:
	  
	      "When a threaded process calls fork to create a child process,
	      Pthreads specifies that only the thread calling fork exists in the
	      child. ... Pthreads does not 'terminate' the other threads in a forked
	      process...They simply cease to exist.  ... This is not a problem if
	      the child process is about to call exec to run a new program, but if
	      you use fork to clone a threaded program, beware that you may lose
	      access to memory, especially heap memory stored only as
	      thread-specific data values."
	  
	  Since P/Invoke currently requires using thread local storage, once you
	  fork(2) you won't be able to invoke exec(2) from managed code (since that
	  would require a P/Invoke transition to call exec(2), which would require
	  TLS, which doesn't exist in the new process).
	 
	  This can only be fixed by removing the TLS dependency on P/Invoke, which
	  isn't a priority (and may not be possible).
	 